--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,7 @@
-name: 'Wait'
-description: 'Wait a designated number of milliseconds'
+name: 'simple-template-renderer'
+description: 'Replaces some ${TOKEN} in files by the corresponding env variable.'
+icon: code
+color: purple
 inputs:
   input:
     description: 'The file(s) to match. Glob pattern can be used'
